[package]
name = "loader-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
base64 = "0.20.0-alpha.1"
actix-web = "4.1.0"
clap = "3.2.8"

[lib]
# Specify here the type of lib you're outputting to. I'm on macos so I put cdylib
crate_type = ["cdylib"]


