[package]
name = "loader-jni"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
once_cell = "1.13.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
clap = "3.2.8"
colour = "0.6.0"
zip = "0.6.2"
rayon = "1.5.3"
aes-gcm = "0.9.4"
actix-web = "4.1.0"
actix-files = "0.6.1"

[lib]
# Specify here the type of lib you're outputting to. I'm on macos so I put cdylib
crate_type = ["cdylib"]


